K1J-511: Reinserted method security annotation and fixed mistake in fakelogin